[gd_scene load_steps=9 format=2]

[ext_resource path="res://Box/box.png" type="Texture" id=1]
[ext_resource path="res://Box/Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.5, 1.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.5, 1.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29, 29 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27, 5 )

[node name="Box" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["BoxCollisionShapes"]]
scale = Vector2( 3.16, 3.16 )
shape = SubResource( 1 )

[node name="PlayerCollisionTop" type="StaticBody2D" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 3.15283, -0.175486 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionTop" groups=["BoxCollisionShapes"]]
rotation = 3.14159
shape = SubResource( 2 )
one_way_collision = true

[node name="PlayerCollisionLeft" type="StaticBody2D" parent="."]
position = Vector2( -30, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionLeft" groups=["BoxCollisionShapes"]]
rotation = -1.5708
shape = SubResource( 3 )
one_way_collision = true

[node name="PlayerCollisionRight" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionRight" groups=["BoxCollisionShapes"]]
position = Vector2( 30.5, 0.5 )
rotation = 1.5708
shape = SubResource( 4 )
one_way_collision = true

[node name="Contents" type="Sprite" parent="."]
z_index = 1

[node name="Box" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerInteractArea" type="Area2D" parent="." groups=["Box InteractArea"]]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteractArea" groups=["BoxCollisionShapes"]]
shape = SubResource( 5 )

[node name="PlayerInsideDetector" type="Area2D" parent="."]
position = Vector2( 0, -16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInsideDetector" groups=["BoxCollisionShapes"]]
position = Vector2( 0, -5 )
shape = SubResource( 6 )

[connection signal="body_entered" from="PlayerInsideDetector" to="." method="_on_PlayerInsideDetector_body_entered"]
